--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,21 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/SHM_COMP_LAB_APP_JOSH_BRENDON
 endorsed.classpath=
 excludes=
 file.reference.javafx-swt.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar
-file.reference.javafx-swt.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx-swt.jar
 file.reference.javafx.base.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.base.jar
-file.reference.javafx.base.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.base.jar
 file.reference.javafx.controls.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.controls.jar
-file.reference.javafx.controls.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.controls.jar
 file.reference.javafx.fxml.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.fxml.jar
-file.reference.javafx.fxml.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.fxml.jar
 file.reference.javafx.graphics.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.graphics.jar
-file.reference.javafx.graphics.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.graphics.jar
 file.reference.javafx.media.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.media.jar
-file.reference.javafx.media.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.media.jar
 file.reference.javafx.swing.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.swing.jar
-file.reference.javafx.swing.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=C:\\javafx-sdk-22.0.2\\lib\\javafx.web.jar
-file.reference.javafx.web.jar-1=C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib\\javafx.web.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -61,15 +53,7 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar-1}:\
-    ${file.reference.javafx.base.jar-1}:\
-    ${file.reference.javafx.controls.jar-1}:\
-    ${file.reference.javafx.fxml.jar-1}:\
-    ${file.reference.javafx.graphics.jar-1}:\
-    ${file.reference.javafx.media.jar-1}:\
-    ${file.reference.javafx.swing.jar-1}:\
-    ${file.reference.javafx.web.jar-1}
+    ${file.reference.javafx.web.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,7 +100,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib" --add-modules=javafx.controls,javafx.fxml
+run.jvmargs=--module-path "C:\\javafx-sdk-22.0.2\\lib" --add-modules=javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
     ${file.reference.javafx-swt.jar}:\
@@ -126,15 +110,7 @@ run.modulepath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar-1}:\
-    ${file.reference.javafx.base.jar-1}:\
-    ${file.reference.javafx.controls.jar-1}:\
-    ${file.reference.javafx.fxml.jar-1}:\
-    ${file.reference.javafx.graphics.jar-1}:\
-    ${file.reference.javafx.media.jar-1}:\
-    ${file.reference.javafx.swing.jar-1}:\
-    ${file.reference.javafx.web.jar-1}
+    ${file.reference.javafx.web.jar}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
