--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,6 @@ javac.classpath=\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
     ${file.reference.javafx-swt.jar-1}:\
-    ${file.reference.javafx.base.jar-1}:\
     ${file.reference.javafx.controls.jar-1}:\
     ${file.reference.javafx.fxml.jar-1}:\
     ${file.reference.javafx.graphics.jar-1}:\
@@ -116,7 +115,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Users\\Public\\Documents\\javafx-sdk-20.0.1\\lib\\javafx-sdk-22.0.2\\lib" --add-modules=javafx.controls,javafx.fxml
+run.jvmargs=--module-path "C:\\javafx-sdk-22.0.2\\lib" --add-modules=javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
     ${file.reference.javafx-swt.jar}:\
