gitignore, revert if it doesn't work

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,14 +61,7 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar-1}:\
-    ${file.reference.javafx.controls.jar-1}:\
-    ${file.reference.javafx.fxml.jar-1}:\
-    ${file.reference.javafx.graphics.jar-1}:\
-    ${file.reference.javafx.media.jar-1}:\
-    ${file.reference.javafx.swing.jar-1}:\
-    ${file.reference.javafx.web.jar-1}
+    ${file.reference.javafx.web.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
