--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/nbproject
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
 build/
 nbbuild/
-nbproject/project.properties
-/nbproject
-*.properties
-/nbproject
-nbproject/project.properties
+dist/
+nbdist/
+.nb-gradle/
